--- a/index.html
+++ b/index.html
@@ -475,9 +475,11 @@
                 <div class="home_hero-header_component">
                     <div class="home_hero-header_image-wrapper">
                         <div class="home_hero-header_background-image-wrapper">
-                            <div class="image-overlay-layer hide"></div><img
-                                src="https://cdn.prod.website-files.com/66aa136e9a9ec8aec249373f/66aa14999acdc2d63bd3c575_6191a88a1c0e39463c2bf022_placeholder-image.svg"
-                                loading="eager" alt="" class="home_hero-header_background-image" />
+                            <div class="video-container">
+                                <iframe src="https://www.youtube.com/embed/LLcREAZYmIE?autoplay=1&mute=1&loop=1&playlist=LLcREAZYmIE&controls=0&showinfo=0&rel=0&modestbranding=1&iv_load_policy=3&disablekb=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                            <div class="image-overlay-layer hide">
+                            </div>
                         </div>
                     </div>
                     <div class="padding-global">
