--- a/services.html
+++ b/services.html
@@ -39,6 +39,7 @@
           class="navbar5_logo"></a>
       <nav role="navigation" class="navbar5_menu w-nav-menu">
         <div class="navbar5_menu-left">
+          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">Home</a>
           <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link w--current">Drone Services</a>
@@ -65,6 +66,8 @@
         style="transition: height 0.5s, transform 400ms; transform: translateY(0px) translateX(0px);"
         data-nav-menu-open="">
         <div class="navbar5_menu-left">
+          <a href="index.html" id="home" aria-current="page"
+            class="navbar5_link w-nav-linkw--nav-link-open">Home</a>
           <a href="index.html" id="home" aria-current="page"
             class="navbar5_link w-nav-link w--nav-link-open">FPV Pilot
             Booking</a>
@@ -635,39 +638,49 @@ a,
             <div class="w-layout-grid footer1_top-wrapper">
               <div class="footer1_left-wrapper">
                 <div class="margin-bottom margin-small">
-                  <a href="#" class="footer1_logo-link w-nav-brand"><img src="images/CIRCLE-LOGO.png" loading="lazy"
-                      sizes="50px" srcset="images/CIRCLE-LOGO-p-500.png 500w, images/CIRCLE-LOGO.png 512w" alt=""
-                      class="image"></a>
+                  <a href="#" class="footer1_logo-link w-nav-brand">
+                    <img src="images/CIRCLE-LOGO.png" loading="lazy" sizes="50px"
+                      srcset="images/CIRCLE-LOGO-p-500.png 500w, images/CIRCLE-LOGO.png 512w" alt="" class="image">
+                  </a>
                 </div>
                 <div class="margin-bottom margin-small">
-                  <div>Subscribe to my newsletter for exclusive offers and updates on exciting new drone builds.</div>
+                  <div>Subscribe to my newsletter for exclusive offers and updates on exciting new drone
+                    builds.</div>
                 </div>
                 <div class="footer1_form-block w-form">
                   <form id="email-form" name="email-form" data-name="Email Form" method="get" class="footer1_form"
-                    data-wf-page-id="66aaaabaa16cc03fe949dc4c"
+                    data-wf-page-id="66aa136e9a9ec8aec249379e"
                     data-wf-element-id="c4c131e7-f11d-7fd4-162f-32f408c163d1"><input class="form_input w-input"
                       maxlength="256" name="email-2" data-name="Email 2" placeholder="Your email" type="email"
                       id="email-2" required="">
                     <a href="#" class="button is-small w-button">Join</a>
                   </form>
-                  <div class="text-size-tiny">By subscribing, you agree to our Privacy Policy and consent to receive
-                    updates from our company.</div>
+                  <div class="text-size-tiny margin-bottom margin-small">By subscribing, you agree to our Privacy Policy and consent to
+                    receive updates from our company.</div>
                   <div class="success-message w-form-done">
                     <div>Thank you! We&#x27;ve received your submission.</div>
                   </div>
                   <div class="error-message w-form-fail">
                     <div>Oops! Something went wrong with the form submission.</div>
                   </div>
+                  <div class="margin-bottom margin-small">
+                    <img class="margin-bottom margin-small" height="50px" src="images/absolutenetwork.svg" loading="lazy" alt="" />
+                    <div> If you’re looking to create an outstanding website like this one, reach out to Absolute
+                      Network
+                      for
+                      professional assistance.</div>
+                  </div>
                 </div>
               </div>
+
               <div class="w-layout-grid footer1_menu-wrapper">
                 <div class="footer1_link-list">
                   <div class="margin-bottom margin-xsmall">
                     <div class="text-weight-semibold">Pages</div>
                   </div>
-                  <a href="index.html" class="footer1_link">Home</a>
-                  <a href="services.html" aria-current="page" class="footer1_link w--current">Hire your FPV Pilot</a>
-                  <a href="services.html" aria-current="page" class="footer1_link w--current">Builds/Repairs/Tuning</a>
+                  <a href="index.html" aria-current="page" class="footer1_link w--current">Home</a>
+                  <a href="services.html" class="footer1_link">Hire your FPV Pilot</a>
+                  <a href="services.html" class="footer1_link">Builds/Repairs/Tuning</a>
                   <a href="socials.html" class="footer1_link">Socials</a>
                 </div>
                 <div class="footer1_link-list">
@@ -684,10 +697,16 @@ a,
                       class="icon-1x1-smally">
                     <div>Youtube</div>
                   </a>
+                  <a href="https://www.patreon.com/ae0n92" target="_blank"
+                    class="footer1_social-link w-inline-block"><img src="images/patreon.svg" loading="lazy" alt=""
+                      class="icon-1x1-smally">
+                    <div>Patreon</div>
+                  </a>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="line-divider"></div>
           <div class="padding-top padding-medium">
             <div class="footer1_bottom-wrapper">
