--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+
   <div fs-scrolldisable-element="smart-nav" data-animation="default" data-collapse="medium" data-duration="400"
     data-easing="ease" data-easing2="ease" role="banner" class="navbar5_component w-nav">
 
@@ -40,7 +41,8 @@
           class="navbar5_logo"></a>
       <nav role="navigation" class="navbar5_menu w-nav-menu">
         <div class="navbar5_menu-left">
-          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link w--current">FPV Pilot
+          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link w--current">Home</a>
+          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link">Drone Services</a>
           <a href="socials.html" class="navbar5_link w-nav-link">Socials</a>
@@ -67,7 +69,9 @@
         data-nav-menu-open="">
         <div class="navbar5_menu-left">
           <a href="index.html" id="home" aria-current="page"
-            class="navbar5_link w-nav-link w--current w--nav-link-open">FPV Pilot
+            class="navbar5_link w-nav-linkw--nav-link-open w--current">Home</a>
+          <a href="index.html" id="home" aria-current="page"
+            class="navbar5_link w-nav-link w--nav-link-open">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link w--nav-link-open">Drone Services</a>
           <a href="socials.html" class="navbar5_link w-nav-link w--nav-link-open">Socials</a>
@@ -80,7 +84,9 @@
     </div>
 
   </div>
+
   <div class="page-wrapper">
+
     <div class="global-styles w-embed">
       <style>
         /* Set color style to inherit */
@@ -298,6 +304,7 @@ a,
         }
       </style>
     </div>
+
     <main class="main-wrapper">
       <header class="section_home_hero-header">
         <div class="home_hero-header_component">
@@ -305,7 +312,7 @@ a,
             <div class="home_hero-header_background-image-wrapper">
               <div class="video-container">
                 <iframe
-                  src="https://www.youtube.com/embed/LLcREAZYmIE?autoplay=1&mute=1&loop=1&playlist=LLcREAZYmIE&controls=0&showinfo=0&rel=0&modestbranding=1&iv_load_policy=3&disablekb=1"
+                  src="https://www.youtube.com/embed/rGzjKkqe3eU?autoplay=1&mute=1&loop=1&playlist=rGzjKkqe3eU&controls=0&showinfo=0&rel=0&modestbranding=1&iv_load_policy=3&disablekb=1"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
             </div>
@@ -551,9 +558,10 @@ a,
           <img src="./images/arrowext.svg" alt="">
         </button>
       </section>
-
     </main>
+
   </div>
+
   <footer class="footer1_component">
     <div class="padding-global">
       <div class="container-large">
@@ -562,12 +570,14 @@ a,
             <div class="w-layout-grid footer1_top-wrapper">
               <div class="footer1_left-wrapper">
                 <div class="margin-bottom margin-small">
-                  <a href="#" class="footer1_logo-link w-nav-brand"><img src="images/CIRCLE-LOGO.png" loading="lazy"
-                      sizes="50px" srcset="images/CIRCLE-LOGO-p-500.png 500w, images/CIRCLE-LOGO.png 512w" alt=""
-                      class="image"></a>
+                  <a href="#" class="footer1_logo-link w-nav-brand">
+                    <img src="images/CIRCLE-LOGO.png" loading="lazy" sizes="50px"
+                      srcset="images/CIRCLE-LOGO-p-500.png 500w, images/CIRCLE-LOGO.png 512w" alt="" class="image">
+                  </a>
                 </div>
                 <div class="margin-bottom margin-small">
-                  <div>Subscribe to my newsletter for exclusive offers and updates on exciting new drone builds.</div>
+                  <div>Subscribe to my newsletter for exclusive offers and updates on exciting new drone
+                    builds.</div>
                 </div>
                 <div class="footer1_form-block w-form">
                   <form id="email-form" name="email-form" data-name="Email Form" method="get" class="footer1_form"
@@ -577,16 +587,24 @@ a,
                       id="email-2" required="">
                     <a href="#" class="button is-small w-button">Join</a>
                   </form>
-                  <div class="text-size-tiny">By subscribing, you agree to our Privacy Policy and consent to receive
-                    updates from our company.</div>
+                  <div class="text-size-tiny margin-bottom margin-small">By subscribing, you agree to our Privacy Policy and consent to
+                    receive updates from our company.</div>
                   <div class="success-message w-form-done">
                     <div>Thank you! We&#x27;ve received your submission.</div>
                   </div>
                   <div class="error-message w-form-fail">
                     <div>Oops! Something went wrong with the form submission.</div>
                   </div>
+                  <div class="margin-bottom margin-small">
+                    <img class="margin-bottom margin-small" height="50px" src="images/absolutenetwork.svg" loading="lazy" alt="" />
+                    <div> If you’re looking to create an outstanding website like this one, reach out to Absolute
+                      Network
+                      for
+                      professional assistance.</div>
+                  </div>
                 </div>
               </div>
+
               <div class="w-layout-grid footer1_menu-wrapper">
                 <div class="footer1_link-list">
                   <div class="margin-bottom margin-xsmall">
@@ -611,10 +629,16 @@ a,
                       class="icon-1x1-smally">
                     <div>Youtube</div>
                   </a>
+                  <a href="https://www.patreon.com/ae0n92" target="_blank"
+                    class="footer1_social-link w-inline-block"><img src="images/patreon.svg" loading="lazy" alt=""
+                      class="icon-1x1-smally">
+                    <div>Patreon</div>
+                  </a>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="line-divider"></div>
           <div class="padding-top padding-medium">
             <div class="footer1_bottom-wrapper">
@@ -630,6 +654,7 @@ a,
       </div>
     </div>
   </footer>
+
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66aa136e9a9ec8aec249373f"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
