--- a/index.html
+++ b/index.html
@@ -483,60 +483,60 @@ a,
               <li class="splide__slide">
                 <div class="testemonial_container">
                   <p class="testemonial_text">
-                    Outstanding service! The FPV pilot captured breathtaking footage for our event. Highly recommended!
+                    Thanks to your incredible skills, my drone flies better than ever. You're a true master of your craft!
                   </p>
                   <p class="testemonial_creator">
-                    Alex Thompson
+                    Max K.
                   </p>
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="testemonial_container">
                   <p class="testemonial_text">
-                    Outstanding service! The FPV pilot captured breathtaking footage for our event. Highly recommended!
+                    The footage from our event was breathtaking. You truly have an eye for spectacular perspectives!
                   </p>
                   <p class="testemonial_creator">
-                    Alex Thompson
+                    Sarah W.
                   </p>
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="testemonial_container">
                   <p class="testemonial_text">
-                    Outstanding service! The FPV pilot captured breathtaking footage for our event. Highly recommended!
+                    My drone was completely out of commission, but thanks to your repair, it's like new again. A thousand thanks!
                   </p>
                   <p class="testemonial_creator">
-                    Alex Thompson
+                    Jonas B.
                   </p>
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="testemonial_container">
                   <p class="testemonial_text">
-                    Outstanding service! The FPV pilot captured breathtaking footage for our event. Highly recommended!
+                    Your advice and tuning have taken my drone to a whole new level. I'm super satisfied!
                   </p>
                   <p class="testemonial_creator">
-                    Alex Thompson
+                    Lea M.
                   </p>
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="testemonial_container">
                   <p class="testemonial_text">
-                    Outstanding service! The FPV pilot captured breathtaking footage for our event. Highly recommended!
+                    Your custom-built drones are simply unbeatable. You built exactly what I envisioned.
                   </p>
                   <p class="testemonial_creator">
-                    Alex Thompson
+                    Daniel H.
                   </p>
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="testemonial_container">
                   <p class="testemonial_text">
-                    Outstanding service! The FPV pilot captured breathtaking footage for our event. Highly recommended!
+                    I can't believe how quickly and precisely you repaired my drone. Thank you for the first-class service!
                   </p>
                   <p class="testemonial_creator">
-                    Alex Thompson
+                    Nina S.
                   </p>
                 </div>
               </li>
@@ -595,13 +595,13 @@ a,
                   <div class="error-message w-form-fail">
                     <div>Oops! Something went wrong with the form submission.</div>
                   </div>
-                  <div class="margin-bottom margin-small">
+                  <a href="https://www.absolutenetwork.de" class="margin-bottom margin-small">
                     <img class="margin-bottom margin-small" height="50px" src="images/absolutenetwork.svg" loading="lazy" alt="" />
                     <div> If you’re looking to create an outstanding website like this one, reach out to Absolute
                       Network
                       for
                       professional assistance.</div>
-                  </div>
+                  </a>
                 </div>
               </div>
 
@@ -665,7 +665,8 @@ a,
     document.addEventListener('DOMContentLoaded', function () {
       var splide = new Splide('#splide-carousel', {
         type: 'loop', // Enable loop mode
-        arrows: false // Disable default arrows
+        arrows: false, // Disable default arrows
+        autoplay: true, // Enable autoplay
       });
 
       var bar = splide.root.querySelector('.my-slider-progress-bar');
