--- a/socials.html
+++ b/socials.html
@@ -425,13 +425,13 @@ a,
                   <div class="error-message w-form-fail">
                     <div>Oops! Something went wrong with the form submission.</div>
                   </div>
-                  <div class="margin-bottom margin-small">
+                  <a href="https://www.absolutenetwork.de" class="margin-bottom margin-small">
                     <img class="margin-bottom margin-small" height="50px" src="images/absolutenetwork.svg" loading="lazy" alt="" />
                     <div> If you’re looking to create an outstanding website like this one, reach out to Absolute
                       Network
                       for
                       professional assistance.</div>
-                  </div>
+                  </a>
                 </div>
               </div>
 
