patreon und dropdown recommended

--- a/socials.html
+++ b/socials.html
@@ -343,8 +343,8 @@ a,
                 </div>
                 <div class="margin-top margin-xlarge">
                   <div class="button-group-2 is-center">
-                    <a href="https://www.instagram.com/AE0NFPV" class="button-2 w-button">Instagram</a>
-                    <a href="https://www.youtube.com/c/AE0NFPV" class="button-2 w-button">Youtube</a>
+                    <a href="https://www.instagram.com/AE0NFPV" class="button-2 w-button"><img style="margin-right: 16px;" height="35px" src="images/insta.svg" alt="instagram">Instagram</a>
+                    <a href="https://www.youtube.com/c/AE0NFPV" class="button-2 w-button"><img style="margin-right: 16px;" height="35px" src="images/youtube.svg" alt="youtube">Youtube</a>
                   </div>
                 </div>
               </div>
