--- a/socials.html
+++ b/socials.html
@@ -40,7 +40,7 @@
       <nav role="navigation" class="navbar5_menu w-nav-menu">
         <div class="navbar5_menu-left">
           <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">Home</a>
-          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
+          <a href="booking.html" id="booking" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link">Drone Services</a>
           <a href="socials.html" class="navbar5_link w-nav-link w--current">Socials</a>
@@ -68,7 +68,7 @@
         <div class="navbar5_menu-left">
           <a href="index.html" id="home" aria-current="page"
             class="navbar5_link w-nav-linkw--nav-link-open">Home</a>
-          <a href="index.html" id="home" aria-current="page"
+          <a href="booking.html" id="booking" aria-current="page"
             class="navbar5_link w-nav-link w--nav-link-open">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link w--nav-link-open">Drone Services</a>
