--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <nav role="navigation" class="navbar5_menu w-nav-menu">
         <div class="navbar5_menu-left">
           <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link w--current">Home</a>
-          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
+          <a href="booking.html" id="home" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link">Drone Services</a>
           <a href="socials.html" class="navbar5_link w-nav-link">Socials</a>
@@ -70,7 +70,7 @@
         <div class="navbar5_menu-left">
           <a href="index.html" id="home" aria-current="page"
             class="navbar5_link w-nav-linkw--nav-link-open w--current">Home</a>
-          <a href="index.html" id="home" aria-current="page"
+          <a href="booking.html" id="booking" aria-current="page"
             class="navbar5_link w-nav-link w--nav-link-open">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link w--nav-link-open">Drone Services</a>
@@ -311,9 +311,10 @@ a,
           <div class="home_hero-header_image-wrapper">
             <div class="home_hero-header_background-image-wrapper">
               <div class="video-container">
-                <iframe
-                  src="https://www.youtube.com/embed/rGzjKkqe3eU?autoplay=1&mute=1&loop=1&playlist=rGzjKkqe3eU&controls=0&showinfo=0&rel=0&modestbranding=1&iv_load_policy=3&disablekb=1"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <video autoplay muted loop controls>
+                  <source src="/images/header_vid.mp4" type="video/mp4">
+                  Dein Browser unterstützt das Video-Tag nicht.
+                </video>
               </div>
             </div>
           </div>
