--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
       <nav role="navigation" class="navbar5_menu w-nav-menu">
         <div class="navbar5_menu-left">
           <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">Home</a>
-          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
+          <a href="booking.html" id="booking" aria-current="page" class="navbar5_link w-nav-link">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link w--current">Drone Services</a>
           <a href="socials.html" class="navbar5_link w-nav-link">Socials</a>
@@ -67,7 +67,7 @@
         data-nav-menu-open="">
         <div class="navbar5_menu-left">
           <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-linkw--nav-link-open">Home</a>
-          <a href="index.html" id="home" aria-current="page" class="navbar5_link w-nav-link w--nav-link-open">FPV Pilot
+          <a href="booking.html" id="booking" aria-current="page" class="navbar5_link w-nav-link w--nav-link-open">FPV Pilot
             Booking</a>
           <a href="services.html" class="navbar5_link w-nav-link w--current w--nav-link-open">Drone Services</a>
           <a href="socials.html" class="navbar5_link w-nav-link w--nav-link-open">Socials</a>
