extra tab for shop

--- a/socials.html
+++ b/socials.html
@@ -46,7 +46,7 @@
           <a href="socials.html" class="navbar5_link w-nav-link w--current">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
@@ -75,7 +75,7 @@
           <a href="socials.html" class="navbar5_link w-nav-link w--current w--nav-link-open">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
