--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="socials.html" class="navbar5_link w-nav-link">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
@@ -77,7 +77,7 @@
           <a href="socials.html" class="navbar5_link w-nav-link w--nav-link-open">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
