admin Backend angelegt

--- a/booking.html
+++ b/booking.html
@@ -514,7 +514,7 @@ a,
                   <a href="https://www.absolutenetwork.de" class="margin-bottom margin-small">
                     <img class="margin-bottom margin-small" height="50px" src="images/absolutenetwork.svg"
                       loading="lazy" alt="" />
-                    <div> If you’re looking to create an outstanding website like this one, reach out to Absolute
+                    <div> If you're looking to create an outstanding website like this one, reach out to Absolute
                       Network
                       for
                       professional assistance.</div>
@@ -630,6 +630,10 @@ a,
         }
       });
     });
+  </script>
+
+  <script type="module">
+    import ColorManager from './js/color-manager.js';
   </script>
 
 </body>
