--- a/index.html
+++ b/index.html
@@ -716,6 +716,9 @@ a,
     });
   </script>
 <script src="js/absolutenetwork.js"></script>
+<script type="module">
+  import ColorManager from './js/color-manager.js';
+</script>
 </body>
 
 </html>
