--- a/admin/index.html
+++ b/admin/index.html
@@ -18,47 +18,107 @@
             <button id="logoutButton" class="button logout-button">Logout</button>
         </div>
 
-        <div class="color-management-section">
-            <h2 class="backend-card-title">Farbschema-Verwaltung</h2>
+        <nav class="admin-nav">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="#allgemein" class="nav-link active">Allgemein</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#farbschema" class="nav-link">Farbschema</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#startseite" class="nav-link">Startseite</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#services" class="nav-link">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#socials" class="nav-link">Socials</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#kontakt" class="nav-link">Kontakt</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#booking" class="nav-link">Booking</a>
+                </li>
+            </ul>
+        </nav>
 
-            <div class="color-schemes">
-                <h3>Aktuelle Farbschemas</h3>
-                <div id="colorSchemesList" class="color-schemes-list">
-                    <!-- Wird dynamisch gefüllt -->
+        <div class="content-sections">
+            <!-- Allgemein Section -->
+            <section id="allgemein" class="content-section active">
+                <h2>Allgemeine Einstellungen</h2>
+                <!-- Hier kommen später die allgemeinen Einstellungen -->
+            </section>
+
+            <!-- Farbschema Section -->
+            <section id="farbschema" class="content-section">
+                <h2>Farbschema-Verwaltung</h2>
+                <div class="color-schemes">
+                    <h3>Aktuelle Farbschemas</h3>
+                    <div id="colorSchemesList" class="color-schemes-list">
+                        <!-- Wird dynamisch gefüllt -->
+                    </div>
                 </div>
-            </div>
 
-            <div class="add-color-scheme">
-                <h3>Neues Farbschema hinzufügen</h3>
-                <form id="addColorSchemeForm" class="color-scheme-form">
-                    <div class="form-group">
-                        <label for="schemeName">Name:</label>
-                        <input type="text" id="schemeName" name="name" required>
-                    </div>
+                <div class="add-color-scheme">
+                    <h3>Neues Farbschema hinzufügen</h3>
+                    <form id="addColorSchemeForm" class="color-scheme-form">
+                        <div class="form-group">
+                            <label for="schemeName">Name:</label>
+                            <input type="text" id="schemeName" name="name" required>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="primaryColor">Primärfarbe:</label>
-                        <input class="color-box" type="color" id="primaryColor" name="primary_color" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="primaryColor">Primärfarbe:</label>
+                            <input class="color-box" type="color" id="primaryColor" name="primary_color" required>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="secondaryColor">Sekundärfarbe:</label>
-                        <input class="color-box" type="color" id="secondaryColor" name="secondary_color" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="secondaryColor">Sekundärfarbe:</label>
+                            <input class="color-box" type="color" id="secondaryColor" name="secondary_color" required>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="textColor">Textfarbe:</label>
-                        <input class="color-box" type="color" id="textColor" name="text_color" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="textColor">Textfarbe:</label>
+                            <input class="color-box" type="color" id="textColor" name="text_color" required>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="backgroundColor">Hintergrundfarbe:</label>
-                        <input class="color-box" type="color" id="backgroundColor" name="background_color" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="backgroundColor">Hintergrundfarbe:</label>
+                            <input class="color-box" type="color" id="backgroundColor" name="background_color" required>
+                        </div>
 
-                    <button type="submit" class="button">Farbschema hinzufügen</button>
-                </form>
-            </div>
+                        <button type="submit" class="button">Farbschema hinzufügen</button>
+                    </form>
+                </div>
+            </section>
+
+            <!-- Weitere Sections für andere Seiten -->
+            <section id="startseite" class="content-section">
+                <h2>Startseite Einstellungen</h2>
+                <!-- Hier kommen die Einstellungen für die Startseite -->
+            </section>
+
+            <section id="services" class="content-section">
+                <h2>Services Einstellungen</h2>
+                <!-- Hier kommen die Einstellungen für die Services-Seite -->
+            </section>
+
+            <section id="socials" class="content-section">
+                <h2>Socials Einstellungen</h2>
+                <!-- Hier kommen die Einstellungen für die Socials-Seite -->
+            </section>
+
+            <section id="kontakt" class="content-section">
+                <h2>Kontakt Einstellungen</h2>
+                <!-- Hier kommen die Einstellungen für die Kontakt-Seite -->
+            </section>
+
+            <section id="booking" class="content-section">
+                <h2>Booking Einstellungen</h2>
+                <!-- Hier kommen die Einstellungen für die Booking-Seite -->
+            </section>
         </div>
     </div>
 
