--- a/contact.html
+++ b/contact.html
@@ -155,15 +155,14 @@
                         maxlength="5000" id="Contact-2-Message-2" name="Contact-2-Message-2"
                         data-name="Contact 2 Message 2" required="" class="form_input is-text-area w-input"></textarea>
                     </div>
-                    <div class="margin-bottom margin-xsmall"><label id="Contact-4-Checkbox"
-                        class="w-checkbox form_checkbox">
-                        <div class="w-checkbox-input w-checkbox-input--inputType-custom form_checkbox-icon-2"></div>
-                        <input type="checkbox" id="Contact 4 Checkbox" name="Contact-4-Checkbox"
-                          data-name="Contact 4 Checkbox" required=""
-                          style="opacity:0;position:absolute;z-index:-1"><span for="Contact-4-Checkbox"
-                          class="form_checkbox-label text-size-small w-form-label">I agree to the Terms</span>
-                      </label></div>
-                      <button type="submit" data-wait="Please wait..."
+                    <div class="form_field-wrapper">
+                        <label class="checkbox-container">
+                            <input type="checkbox" id="Contact-4-Checkbox" name="Contact-4-Checkbox" required>
+                            <span class="checkmark"></span>
+                            <span class="checkbox-label">I agree to the Terms</span>
+                        </label>
+                    </div>
+                    <button type="submit" data-wait="Please wait..."
                       id="w-node-c6151d74-b655-3d7a-dd0e-42b3fd0e30c3-350e1ccf" class="button-2 w-button"
                       value="Submit">Submit</button>
                   </form>
@@ -287,34 +286,9 @@
       </div>
     </div>
   </footer>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66aa136e9a9ec8aec249373f"
-    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
-  <script src="js/mine.js" type="text/javascript"></script>
-  <script>
-    $(document).ready(function () {
-      $('.navbar5_menu-button').on('click', function () {
-        var $menuOverlay = $('.menu-overlay');
-
-        if ($menuOverlay.css('display') === 'none') {
-          $menuOverlay.css({
-            display: 'block',
-            height: '0'
-          });
-
-          $menuOverlay.animate({
-            height: '100vh'
-          }, 300); // Höhe auf 100% animieren
-        } else {
-          $menuOverlay.animate({
-            height: '0'
-          }, 300, function () {
-            $menuOverlay.css('display', 'none'); // Nach der Animation display auf none setzen
-          });
-        }
-      });
-    });
-  </script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="js/contact-form.js" type="module"></script>
   <script type="module">
     import ColorManager from './js/color-manager.js';
   </script>
